# pluginmarket

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.backend  Dockerfile.proxy  INSTALL.md  QUICKSTART.md  README.md  backup-manager.html  backup-manager.js  config-history.html  config-history.js  config-manager.html  config-manager.js  config.js  debug.html  docker-compose.yml  index-debug.html  install.sh  package-lock.json  package.json  pnpm-lock.yaml  proxy_server.py  status-monitor.html  status-monitor.js  test-admin.html  test-frontend.html  test.html  test_smtp.py  upload-test.html  vapid_private.pem  vapid_public.pem
docker/: README.md  SMTP_TROUBLESHOOTING.md  fix-postgres-auth.sh  init.sql  install.sh
docs/: README.md
docs/api/: admin.md  authentication.md  health.md  plugins.md  search.md
docs/architecture/: components.md  overview.md  security.md
docs/database/: migrations.md  performance.md  schema.md
frontend/: admin.html  admin.js  app.js  index.html  package.json  proxy-test.html  rewriteUI.md  tailwind.config.js
frontend_new/: MIGRATION_GUIDE.md  README.md  admin.html  admin.js  app.js  config.js  index.html  package.json
server/: .env  .env.example  Cargo.toml  Dockerfile  QUICKSTART.md  README.md  README_AVATAR.md  docker-compose.yml  info.json  marketplace.db  nginx.conf  package.json
server/config/: config.yaml
server/migrations/: 001_initial.sql  20240127000004_add_admin_features.sql  20250101000001_add_config_management.sql  20250101000002_fix_config_history.sql  20250102000001_add_config_store.sql  20250813085847_add_plugin_management_features.sql  20250816000001_add_user_avatar.sql  20250816105438_fix_avatar_unique_constraint.sql  20250816110215_fix_avatar_trigger_timing.sql
server/scripts/: build.sh  deploy.sh
server/src/: main.rs
server/src/handlers/: admin.rs  auth.rs  avatar.rs  backup.rs  config.rs  health.rs  mod.rs  monitoring.rs  plugins.rs  search.rs
server/src/middleware/: auth.rs  rate_limit.rs
server/src/models/: admin.rs  auth.rs  backup.rs  config.rs  mod.rs  monitoring.rs  plugin.rs  rating.rs  user.rs
server/src/services/: admin.rs  auth.rs  backup.rs  config.rs  mod.rs  monitoring.rs  plugin.rs  smtp.rs  storage.rs
server/src/utils/: config.rs  validation.rs
test_plugin/: info.json
(+13 files in other folders)
