[package]
name = "geektools-marketplace-server"
version = "1.0.0"
edition = "2021"
authors = ["GeekTools Team"]
description = "GeekTools Plugin Marketplace Server"
license = "MIT"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros", "multipart"] }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util", "timeout", "load-shed"] }
tower-http = { version = "0.5", features = ["fs", "cors", "trace", "compression-gzip"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "sqlite", "chrono", "uuid", "migrate", "ipnetwork"] }
ipnetwork = "0.20"
sea-orm = { version = "0.12", features = ["sqlx-postgres", "sqlx-sqlite", "runtime-tokio-rustls", "macros", "with-chrono", "with-uuid"] }
sea-orm-migration = "0.12"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Authentication & Security
jsonwebtoken = "9.2"
bcrypt = "0.15"
uuid = { version = "1.6", features = ["v4", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Configuration
config = "0.14"
clap = { version = "4.4", features = ["derive"] }

# File handling
tempfile = "3.8"
tokio-util = { version = "0.7", features = ["io"] }
futures-util = "0.3"

# Validation
validator = { version = "0.18", features = ["derive"] }
regex = "1.10"
lazy_static = "1.4"
fastrand = "2.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "multipart"] }

# Crypto
sha2 = "0.10"
hex = "0.4"

# Environment
dotenvy = "0.15"

# Email
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Async utilities
async-trait = "0.1"

# Compression
flate2 = "1.0"
tar = "0.4"

# Rate limiting
governor = "0.6"

# Testing (dev dependencies)
[dev-dependencies]
hyper = "1.0"
http-body-util = "0.1"

[[bin]]
name = "server"
path = "src/main.rs"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"
strip = true